--- a/css/common.css
+++ b/css/common.css
@@ -11,6 +11,7 @@ body a,
 body div,
 body p {
     /* color: #dfdfdf */
+    font-size: 1rem;
 }
 
 body a:hover {
@@ -43,7 +44,7 @@ body a:hover {
 
 .header .font-decrease-button,
 .nav .font-decrease-button {
-    font-size: .6rem
+    font-size: .8rem
 }
 
 .footer,
