--- a/css/common.css
+++ b/css/common.css
@@ -48,6 +48,11 @@ body a:hover {
     font-size: .8rem
 }
 
+.font-button-inverted {
+    color: black;
+    background-color: white;
+}
+
 .footer,
 .header,
 .nav {
